--- a/build.gradle
+++ b/build.gradle
@@ -36,14 +36,11 @@ compileTestJava {
 }
 
 dependencies {
-    compile ('org.springframework.boot:spring-boot-starter-web') {
-        exclude module: "spring-boot-starter-logging"
-        exclude module: "logback-classic"
-    }
+    compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.postgresql:postgresql:9.4-1200-jdbc41'
-}
+    compile ('org.postgresql:postgresql:9.4-1200-jdbc41') {
+        exclude module: 'slf4j-api'
+        exclude module: 'slf4j-simple'
+    }
 
-dependencies {
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
 }
