--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ version file('version.txt').text
 apply plugin: 'java'
 apply plugin: 'org.springframework.boot'
 
+
 compileJava {
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
@@ -35,6 +36,10 @@ compileTestJava {
     options.encoding = 'UTF-8'
 }
 
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-data-jpa'
@@ -44,3 +49,4 @@ dependencies {
     }
 
 }
+
