Update and rename src/main/resources/application.properties to  src/ main/ resources/application.properties

--- a/src/ main/ resources/application.properties
+++ b/src/ main/ resources/application.properties
@@ -9,8 +9,8 @@ server.port=8080
 
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/link_reductionDB
-spring.datasource.username=postgres
-spring.datasource.password=SirotkinNikita94
+spring.datasource.username=
+spring.datasource.password=
 
 # ===============================
 # JPA / HIBERNATE
